gke/api-deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: synergychat-api
  namespace: synergychat 
  labels: 
    app: synergychat-api
spec:
  replicas: 1
  selector:
    matchLabels: 
      app:  synergychat-api
  template:
    metadata:
      labels:
        app: synergychat-api
    spec: 
      containers:
      - name: synergychat-api
        image: bootdotdev/synergychat-api:latest
        volumeMounts:
        - name: synergychat-api-volume
          mountPath: /persist
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: synergychat-api-volume
        persistentVolumeClaim:
          claimName: synergychat-api-pvc
