gke/crawler-deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: synergychat-crawler
  namespace: synergychat 
  labels: 
    app: synergychat-crawler
spec:
  replicas: 1
  selector:
    matchLabels: 
      app:  synergychat-crawler
  template:
    metadata:
      labels:
        app: synergychat-crawler
    spec: 
      containers:
      - name: synergychat-crawler-1
        image: bootdotdev/synergychat-crawler:latest
        volumeMounts:
        - name: cache-volume
          mountPath: /cache
        resources: 
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
      - name: synergychat-crawler-2
        image: bootdotdev/synergychat-crawler:latest
        volumeMounts:
        - name: cache-volume
          mountPath: /cache
        resources: 
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes: 
      - name: cache-volume
        emptyDir: {}
