gke/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: synergychat 
spec:
  type: ClusterIP
  selector:
    app: synergychat-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
