gke/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: synergychat 
spec:
  selector:
    app: synergychat-web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
