gke/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: synergychat 
spec:
  parentRefs:
    - name: app-gateway
      namespace: gateway-infra
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api-service
          port: 80
